# aiblocks

./: .env.example  .gitignore  README.md  pyproject.toml
aiblocks/: __init__.py
aiblocks/agent/: __init__.py  config.py  pipeline.py
aiblocks/core/: __init__.py  base.py
aiblocks/deployment/: __init__.py  config.py  pipeline.py
aiblocks/evaluation/: __init__.py  config.py  pipeline.py
aiblocks/evaluation/frameworks/: __init__.py  deepeval_runner.py  ragas_runner.py
aiblocks/evaluation/metrics/: __init__.py  llm_judge.py  operational.py  rag_metrics.py  statistical.py
aiblocks/finetuning/: __init__.py  config.py  pipeline.py
aiblocks/rag/: __init__.py  config.py  exceptions.py  pipeline.py
aiblocks/rag/chunkers/: __init__.py  text_chunker.py
aiblocks/rag/embeddings/: __init__.py  embedding_model.py
aiblocks/rag/generators/: __init__.py  generator.py
aiblocks/rag/loaders/: __init__.py  document_loader.py
aiblocks/rag/rerankers/: __init__.py  reranker.py
aiblocks/rag/retrievers/: __init__.py  retriever.py
aiblocks/rag/vectorstores/: __init__.py  vector_store.py
chroma_local/: chroma.sqlite3
chroma_quickstart/: chroma.sqlite3
examples/: eval_quickstart.py  local_rag_quickstart.py  rag_quickstart.py
examples/sample_docs/: ai_overview.txt
tests/: test_rag_robustness.py
